# codspeed-cpp

./: .bazelrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  cliff.toml  compare_workflow_durations.py  flake.nix
.bcr/: config.yml
.bcr/core/: metadata.template.json  source.template.json
.bcr/google_benchmark/: source.template.json
.github/workflows/: ci.yml  publish-to-bcr.yml
core/: BUILD  CMakeLists.txt  MODULE.bazel
core/include/: codspeed.h  measurement.hpp
core/scripts/: detect_toolchain.sh  test_detect_toolchain.sh
core/src/: codspeed.cpp  measurement.cpp  measurement.h  measurement.hpp  uri.cpp  utils.h  walltime.cpp  walltime.h  workspace.cpp
core/test/: CMakeLists.txt  codspeed.cpp  uri.cpp  walltime.cpp
examples/google_benchmark/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE  bazel-bin  bazel-google_benchmark  bazel-out  bazel-testlogs  fixture_bench.hpp  main.cpp  template_bench.hpp
examples/google_benchmark_bazel/: BUILD.bazel  fibonacci_bench.hpp  fixture_bench.hpp  helper.hpp  json_bench.hpp  main.cpp  memory_bench.hpp  multithread_bench.hpp  pause_timing_bench.hpp  sleep_bench.hpp  template_bench.hpp
examples/google_benchmark_cmake/: CMakeLists.txt  fibonacci_bench.hpp  fixture_bench.hpp  helper.hpp  main.cpp  memory_bench.hpp  multithread_bench.hpp  pause_timing_bench.hpp  sleep_bench.hpp  template_bench.hpp
google_benchmark/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
google_benchmark/bazel/: benchmark_deps.bzl
google_benchmark/cmake/: Codspeed.cmake
google_benchmark/examples/: CMakeLists.txt
google_benchmark/include/benchmark/: benchmark.h
google_benchmark/include/codspeed_picobench_compat/: picobench.hpp
google_benchmark/src/: CMakeLists.txt  benchmark.cc  benchmark_api_internal.cc  benchmark_api_internal.h  benchmark_name.cc  benchmark_register.cc  benchmark_runner.cc  benchmark_runner.h
picobench/: CMakeLists.txt
picobench/examples/: CMakeLists.txt  basic.cpp
picobench/include/codspeed_picobench_compat/: picobench.hpp
scripts/: release.sh
