bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "instrument_hooks", version = "1.0.0")

git_override(
    module_name = "instrument_hooks",
    commit = "42ed74076c697c2f06c5ac81a84ccee983d7f140",
    remote = "https://github.com/CodSpeedHQ/instrument-hooks",
)
