# This MODULE.bazel is for local development in the monorepo.
# Individual modules have their own MODULE.bazel files.

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

# Local path overrides for development - these point to the subdirectories
# When published to BCR, users will get the published versions instead
bazel_dep(name = "codspeed_core")
local_path_override(
    module_name = "codspeed_core",
    path = "core",
)

bazel_dep(name = "codspeed_google_benchmark_compat")
local_path_override(
    module_name = "codspeed_google_benchmark_compat",
    path = "google_benchmark",
)
