load("@rules_cc//cc:defs.bzl", "cc_binary")

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

cc_binary(
    name = "my_benchmark",
    srcs = glob(["*.cpp", "*.hpp"]),
    copts = select({
        ":windows": ["/std:c++17", "/W4", "/WX"],
        "//conditions:default": ["-Wall", "-Wextra", "-Werror"],
    }),
    deps = [
        "@codspeed_google_benchmark_compat//:benchmark"
    ],
)
